Adding condition to exclude languages while building app bundles

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -135,6 +135,12 @@ android {
             returnDefaultValues = true
         }
     }
+
+    bundle {
+        language {
+            enableSplit false
+        }
+    }
 }
 
 apply from: '../gradle/src/test.gradle'
