Force dependency on latest version of SoLoader.
Change-Id: Ib3280ee1897da17ae0d2b733e8ed0d866010876d

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -181,6 +181,14 @@ dependencies {
     implementation "com.facebook.fresco:animated-gif:$frescoVersion"
     implementation "com.facebook.fresco:fresco:$frescoVersion"
     implementation "com.facebook.fresco:imagepipeline-okhttp3:$frescoVersion"
+
+    // TODO: remove when Fresco updates its bundled version of soloader.
+    configurations.all {
+        resolutionStrategy {
+            force "com.facebook.soloader:soloader:0.8.0"
+        }
+    }
+
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.romandanylyk:pageindicatorview:1.0.2'
     implementation "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
