--- a/app/build.gradle
+++ b/app/build.gradle
@@ -185,9 +185,9 @@ dependencies {
     }
 
     implementation 'com.duolingo.open:rtl-viewpager:1.0.3'
-    implementation "com.facebook.fresco:animated-gif:$frescoVersion"
-    implementation "com.facebook.fresco:fresco:$frescoVersion"
-    implementation "com.facebook.fresco:imagepipeline-okhttp3:$frescoVersion"
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.romandanylyk:pageindicatorview:1.0.2'
