--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ android:
   - tools
   - build-tools-29.0.2
   - android-29
+before_install:
+  - yes | sdkmanager "platforms;android-29"
 before_script:
 - chmod +x gradlew scripts/tag-latest.sh
 branches:
