+ experimental features for using @Parcelize

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
         targetCompatibility = JAVA_VERSION
     }
 
+    androidExtensions {
+        experimental = true
+    }
+    
     dexOptions {
         preDexLibraries = true
         jumboMode = true
