Use FlexBox for laying out chips.
Change-Id: I22979affa07ef342649445e03414ba3a4a7d8c5e

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -173,6 +173,7 @@ dependencies {
     implementation "androidx.palette:palette:1.0.0"
     implementation "androidx.preference:preference:1.1.0"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation 'com.google.android:flexbox:2.0.1'
 
     implementation ('com.github.michael-rapp:chrome-like-tab-switcher:0.4.4') {
         exclude group: 'org.jetbrains'
