Introduce onboarding for Image Tags.
Change-Id: I8d26ea8fe91d5d2dc254f26e874089666c5248d7

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -239,6 +239,8 @@
 
         <activity android:name=".onboarding.SuggestedEditsOnboardingActivity" />
 
+        <activity android:name=".suggestededits.SuggestedEditsImageTagsOnboardingActivity" />
+
         <provider
             android:authorities="${applicationId}"
             android:name=".database.AppContentProvider"
