--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -241,6 +241,8 @@
 
         <activity android:name=".suggestededits.SuggestedEditsImageTagsOnboardingActivity" />
 
+        <activity android:name=".watchlist.WatchlistActivity" />
+
         <provider
             android:authorities="${applicationId}"
             android:name=".database.AppContentProvider"
