--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -241,7 +241,8 @@
 
         <activity android:name=".suggestededits.SuggestedEditsImageTagsOnboardingActivity" />
 
-        <activity android:name=".watchlist.WatchlistActivity" />
+        <activity android:name=".watchlist.WatchlistActivity"
+            android:theme="@style/AppTheme.ActionBar.SuggestedEdits"/>
 
         <provider
             android:authorities="${applicationId}"
