Add stub upgrade service.
Change-Id: I4f3be443e4a7bd447d8541e366512db49a7fee29

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -343,5 +343,9 @@
 
         <receiver android:name=".savedpages.SavedPageSyncNotification" />
 
+        <service
+            android:name=".offline.UpgradeService"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+
     </application>
 </manifest>
