--- a/app/build.gradle
+++ b/app/build.gradle
@@ -154,6 +154,7 @@ dependencies {
 
     String okHttpVersion = '3.14.0'
     String retrofitVersion = '2.6.0'
+    String glideVersion = '4.11.0'
     String butterknifeVersion = '10.2.0'
     String espressoVersion = '3.1.1'
     String mockitoCore = 'org.mockito:mockito-core:1.9.5'
@@ -179,9 +180,9 @@ dependencies {
     }
 
     implementation 'com.duolingo.open:rtl-viewpager:1.0.3'
-    implementation 'com.github.bumptech.glide:glide:4.10.0'
-    implementation 'com.github.bumptech.glide:okhttp3-integration:4.10.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    implementation "com.github.bumptech.glide:okhttp3-integration:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.romandanylyk:pageindicatorview:1.0.2'
