Basic push notification support
Adds initial support for push notifications via Firebase Cloud Messaging.
On startup, the app will retrieve an identifier token from Firebase, and
register or update its registration with the configured push notification
service, if any.

Setup steps:

1) Pull this patch and rebuild the project to pull in new required
   dependencies.

2) Retrieve the file at https://phabricator.wikimedia.org/F31621302 and
   save it as app/google-services.json.

3) Launch the app, navigate to the developer settings, and do the
   following:

     * toggle "enable push notifications" to true

     * set the push service base URL to "https://pushd.wmflabs.org"

   Then close and relaunch the app.

To send a test push notification, post a message payload to the
prototype service. Example:

  curl -X POST -d "title=Foo&msg=Bar" https://<user>:<pass>@pushd.wmflabs.org/event/broadcast

Ask me for the auth username and password.

NOTES:

* The google-services.json Firebase credentials assume that the app
  ID will be org.wikipedia.dev (i.e., the Dev flavor). Other build
  flavors will not likely work with these credentials.

* A README describing the full push service API is available at
  https://github.com/mdholloway/pushd/blob/master/README.md. Please note
  that this is currently only a prototype, and implementation details are
  very likely to change.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
@@ -174,6 +175,8 @@ dependencies {
     implementation "androidx.preference:preference:1.1.0"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'com.google.android:flexbox:2.0.1'
+    implementation 'com.google.firebase:firebase-messaging:20.1.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
 
     implementation ('com.github.michael-rapp:chrome-like-tab-switcher:0.4.6') {
         exclude group: 'org.jetbrains'
