Initial migration to ViewPager2.
Change-Id: Ib89791be0389ad0f4cf37318c85e61e45f068d88

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -173,13 +173,13 @@ dependencies {
     implementation "androidx.palette:palette:1.0.0"
     implementation "androidx.preference:preference:1.1.0"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'com.google.android:flexbox:2.0.1'
 
     implementation ('com.github.michael-rapp:chrome-like-tab-switcher:0.4.6') {
         exclude group: 'org.jetbrains'
     }
 
-    implementation 'com.duolingo.open:rtl-viewpager:1.0.3'
     implementation "com.facebook.fresco:animated-gif:$frescoVersion"
     implementation "com.facebook.fresco:fresco:$frescoVersion"
     implementation "com.facebook.fresco:imagepipeline-okhttp3:$frescoVersion"
