Added an activity to hols the image tag fragment along with an action button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -240,6 +240,10 @@
         <activity android:name=".onboarding.SuggestedEditsOnboardingActivity" />
 
         <activity android:name=".suggestededits.SuggestedEditsImageTagsOnboardingActivity" />
+        <activity
+            android:name=".suggestededits.SuggestedEditsFeedCardImageTagActivity"
+            android:launchMode="singleTask"
+            android:theme="@style/AppTheme.ActionBar.SuggestedEdits" />
 
         <provider
             android:authorities="${applicationId}"
