--- a/app/build.gradle
+++ b/app/build.gradle
@@ -204,6 +204,7 @@ dependencies {
     implementation 'com.microsoft.appcenter:appcenter-crashes:3.1.0'
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'org.jsoup:jsoup:1.12.1'
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterknifeVersion"
 
