--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -242,6 +242,11 @@
             android:name=".suggestededits.SuggestedEditsFeedCardImageTagActivity"
             android:theme="@style/AppTheme.ActionBar.SuggestedEdits" />
 
+        <activity
+            android:name=".suggestededits.SuggestedEditsContributionsActivity"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize"
+            android:theme="@style/AppTheme.ActionBar" />
+
         <provider
             android:authorities="${applicationId}"
             android:name=".database.AppContentProvider"
