Setup toolbar view instead of build in actionbar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -244,7 +244,7 @@
 
         <activity
             android:name=".commons.FilePageActivity"
-            android:theme="@style/AppTheme.ActionBar"/>
+            android:theme="@style/AppTheme"/>
 
         <provider
             android:authorities="${applicationId}"
