--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
     -->
     <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
 
+    <uses-feature android:name="android.hardware.type.pc" android:required="false" />
+
     <application
         android:allowBackup="true"
         android:fullBackupContent="@xml/full_backup_rules"
