--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -244,7 +244,8 @@
 
         <activity
             android:name=".commons.FilePageActivity"
-            android:theme="@style/AppTheme"/>
+            android:label="@string/file_page_activity_title"
+            android:theme="@style/AppTheme.ActionBar"/>
 
         <provider
             android:authorities="${applicationId}"
