--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -245,7 +245,7 @@
         <activity
             android:name=".commons.FilePageActivity"
             android:label="@string/file_page_activity_title"
-            android:theme="@style/AppTheme.ActionBar"/>
+            android:theme="@style/AppTheme.ActionBar.LargeTextToolbar"/>
 
         <provider
             android:authorities="${applicationId}"
