--- a/app/build.gradle
+++ b/app/build.gradle
@@ -205,6 +205,7 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'org.jsoup:jsoup:1.12.1'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.4'
 
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterknifeVersion"
 
