--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: android
 jdk:
-- oraclejdk8
-dist: trusty
+- oraclejdk9
+dist: xenial
 android:
   components:
   - platform-tools
   - tools
-  - build-tools-29.0.3
   - android-29
 before_script:
 - chmod +x gradlew scripts/tag-latest.sh
