--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     repositories {
         jcenter()
         google()
+        mavenCentral()
         mavenLocal()
     }
     dependencies {
@@ -16,6 +17,7 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         google()
+        mavenCentral()
         mavenLocal()
     }
 }
