--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ android:
   components:
   - platform-tools
   - tools
+  - build-tools-29.0.2
   - android-29
 before_script:
 - chmod +x gradlew scripts/tag-latest.sh
