--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ android:
   - platform-tools
   - tools
   - build-tools-28.0.3
+  - build-tools-29.0.2
   - android-29
 before_script:
 - chmod +x gradlew scripts/tag-latest.sh
