--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ android:
   - platform-tools
   - tools
   - android-29
+licenses:
+  - '.+'
 before_script:
 - chmod +x gradlew scripts/tag-latest.sh
 branches:
