--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ android:
   components:
   - platform-tools
   - tools
+  - build-tools-28.0.3
+  - build-tools-29.0.2
   - android-29
 licenses:
   - '.+'
