--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ jdk:
 dist: xenial
 android:
   components:
-  - platform-tools
-  - tools
-  - build-tools-29.0.2
+  - build-tools-29.0.3
   - android-29
-licenses:
-  - '.+'
+  - add-on
+  - extra
+  licenses:
+    - 'android-sdk-license-.+'
 before_script:
 - chmod +x gradlew scripts/tag-latest.sh
 branches:
