--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,11 @@ dist: xenial
 android:
   components:
   - tools
+  - android-29
   - build-tools-29.0.3
-  licenses:
-    - '.+'
-install:
-  - echo yes | sdkmanager "tools"
-  - echo yes | sdkmanager "platforms;android-29"
+before_install:
+  - yes | sdkmanager "tools"
+  - yes | sdkmanager --licenses
 before_script:
 - chmod +x gradlew scripts/tag-latest.sh
 branches:
